# yapge

./: .gitignore  README.md  main.py  pyproject.toml
assets/maps/: base.tlmp
demos/pong/: main.py  map.tlmp
engine/: __init__.py  camera.py  entities.py  inventory.py  map.py  screen.py
src/engine/: __init__.py  camera.py  inventory.py  map.py
